--- a/themes/agency.html
+++ b/themes/agency.html
@@ -367,6 +367,7 @@ If set to the empty list <code>[]</code>, the team area will not be displayed.";
   </footer>
   </div>
 </div>
+<script crossorigin="anonymous" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script crossorigin="anonymous" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
 <script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/nix.min.js"></script>
