--- a/themes/orbit.html
+++ b/themes/orbit.html
@@ -255,6 +255,7 @@ if set to <code>null</code>, the summary area will not be displayed.</p>
   </footer>
   </div>
 </div>
+<script crossorigin="anonymous" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script crossorigin="anonymous" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
 <script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/nix.min.js"></script>
